Support downloading of script outputs
Script outputs can now be downloaded in .zip or .tar.gz formats. To prevent
download of the original data files the execution now occurs in path/output.

The console (STDOUT) is not included, may want to add this for scripts that
output useful info.

--- a/wooey/templates/layout.html
+++ b/wooey/templates/layout.html
@@ -44,7 +44,7 @@
 {% endwith %}
 
 <header>{% block header %}{% endblock %}</header>
-<div class="{% block content_class %}row{% endblock content_class %}">
+<div class="{% block content_class %}row{% endblock content_class %} full-width">
 
   <div role="main">
     {% with messages = get_flashed_messages(with_categories=true) %}
