--- a/wooey/templates/public/job-form.html
+++ b/wooey/templates/public/job-form.html
@@ -57,12 +57,10 @@
     </div>
 
 <div class="row">
-    <div class="large-9 columns">
-        <input type="button" class="button alert right small" value="Cancel" onclick="window.history.back()">
-    </div><div class="large-3 columns">
-        <input type="submit" class="button success right small" value="Run">
-    </div>
-
+    <div class="large-12 columns"><div class="right">
+        <input type="button" class="button alert" value="Cancel" onclick="window.history.back()">
+        <input type="submit" class="button success" value="Run">
+    </div></div>
 </div>
 
 
