Support for dict choices as labelled drop-down...
Add support for labelled drop-downs for dict choices. Validation by
ArgumentParser uses `in` which will test vs. keys with no changes.
Updated job-form to display nicely.

Support for SVG images via inline inclusion in the generated job output.

--- a/wooey/templates/public/job-form.html
+++ b/wooey/templates/public/job-form.html
@@ -38,9 +38,20 @@
                 <label for="{{ w['data']['display_name'] }}">{{ w['data']['help'] }}
                     <select type="text" placeholder="{{ w['data']['default'] }}" id="{{ w['data']['display_name'] }}" name="{{ w['data']['display_name'] }}">
 
-                        {% for choice in w['data']['choices'] %}
-                            <option value="{{ choice }}">{{ choice }}</option>
-                        {% endfor %}
+                        {% if w['data']['choices'] is mapping %}
+
+                            {% for choice, label in w['data']['choices'].items() %}
+                                <option value="{{ choice }}">{{ label }}</option>
+                            {% endfor %}
+
+                        {% else %}
+
+                            {% for choice in w['data']['choices'] %}
+                                <option value="{{ choice }}">{{ choice }}</option>
+                            {% endfor %}
+
+                        {% endif %}
+
                     </select>
                 </label>
             {% else %}
