--- a/wooey/templates/public/job.html
+++ b/wooey/templates/public/job.html
@@ -63,21 +63,18 @@
 
 <div class="row">
     <div class="large-12 columns">
-        <a href="{{ url_for('public.download_job_output', job_id=job.id, format='.zip') }}" class="button split right"><i class="fa fa-download"></i> Download <span data-dropdown="drop"></span></a><br>
-        <ul id="drop" class="f-dropdown" data-dropdown-content>
-            <li><a href="{{ url_for('public.download_job_output', job_id=job.id, format='.zip') }}"><i class="fa fa-download"></i> .zip</a></li>
-            <li><a href="{{ url_for('public.download_job_output', job_id=job.id, format='.tar.gz') }}"><i class="fa fa-download"></i> .tar.gz</a></li>
-        </ul>
-
-
-
-
+        {% if has_output %}
+            <a href="{{ url_for('public.download_job_output', job_id=job.id, format='.zip') }}" class="button split right"><i class="fa fa-download"></i> Download <span data-dropdown="drop"></span></a><br>
+            <ul id="drop" class="f-dropdown" data-dropdown-content>
+                <li><a href="{{ url_for('public.download_job_output', job_id=job.id, format='.zip') }}"><i class="fa fa-download"></i> .zip</a></li>
+                <li><a href="{{ url_for('public.download_job_output', job_id=job.id, format='.tar.gz') }}"><i class="fa fa-download"></i> .tar.gz</a></li>
+            </ul>
+        {% else %}
+            <span class="button right secondary disabled"><i class="fa fa-warning"></i> No download</span><br>
+        {% endif %}
     </div>
-
 </div>
-
 </div>
-
 </div>
 {% endblock %}
 
