--- a/wooey/templates/public/job.html
+++ b/wooey/templates/public/job.html
@@ -5,10 +5,10 @@
     <h1>{% if script.nicename %}{{ script.display_name }}{% else %}{{ script.name }}{% endif %}
         <small>(Job ID {{ job.id }})</small>
 
-        {% if job.status == 'W' %}<span class="label info">Waiting</span>
-        {% elif job.status == 'R' %}<span class="label info">Running</span>
-        {% elif job.status == 'C' %}<span class="label success">Complete</span>
-        {% elif job.status == 'X' %}<span class="label alert">Error</span>{% endif %}
+        {% if job.status == 'W' %}<span class="label info radius">Waiting</span>
+        {% elif job.status == 'R' %}<span class="label info radius">Running</span>
+        {% elif job.status == 'C' %}<span class="label success radius">Complete</span>
+        {% elif job.status == 'X' %}<span class="label alert radius">Error</span>{% endif %}
 
     </h1>
 
@@ -39,7 +39,7 @@
 
 
 <ul class="tabs" data-tab role="tablist">
-      <li class="tab-title active" role="presentational" ><a href="#output-console" role="tab" tabindex="0" aria-selected="true" controls="output-console">Console</a></li>
+      <li class="tab-title active console-tab" role="presentational" ><a href="#output-console" role="tab" tabindex="0" aria-selected="true" controls="output-console">Console</a></li>
     {% for section in display.keys() %}
       <li class="tab-title" role="presentational" ><a href="#output-{{ section.replace(' ','-') }}" role="tab" tabindex="0" aria-selected="" controls="output-{{ section.replace(' ','-') }}">{{section}}</a></li>
     {% endfor %}
@@ -64,13 +64,13 @@
 <div class="row">
     <div class="large-12 columns">
         {% if has_output %}
-            <a href="{{ url_for('public.download_job_output', job_id=job.id, format='.zip') }}" class="button split right"><i class="fa fa-download"></i> Download <span data-dropdown="drop"></span></a><br>
+            <a href="{{ url_for('public.download_job_output', job_id=job.id, format='.zip') }}" class="button split right radius"><i class="fa fa-download"></i> Download <span data-dropdown="drop"></span></a><br>
             <ul id="drop" class="f-dropdown" data-dropdown-content>
                 <li><a href="{{ url_for('public.download_job_output', job_id=job.id, format='.zip') }}"><i class="fa fa-download"></i> .zip</a></li>
                 <li><a href="{{ url_for('public.download_job_output', job_id=job.id, format='.tar.gz') }}"><i class="fa fa-download"></i> .tar.gz</a></li>
             </ul>
         {% else %}
-            <span class="button right secondary disabled"><i class="fa fa-warning"></i> No download</span><br>
+            <span class="button right secondary disabled radius"><i class="fa fa-warning"></i> No download</span><br>
         {% endif %}
     </div>
 </div>
