--- a/wooey/static/css/style.css
+++ b/wooey/static/css/style.css
@@ -26,13 +26,29 @@ body {
 
 
 
-
 .tab-title > a {
-    padding: 8px 16px !important;
+    padding: 6px 12px !important;
+    font-size:0.75rem;
 }
 
-.tab-title.active > a {
+.tabs-content {
+    border:1px solid #ccc;
 }
+
+.tabs .tab-title > a {
+    border:1px solid #ccc;
+    margin-bottom:-1px;
+    margin-right:1px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.tabs .tab-title.active > a {
+    border:1px solid #ccc;
+    border-bottom:1px solid #fff;
+}
+
+
 
 .settings-panel {
     background-color: #f5f5f5 !important;
@@ -45,7 +61,13 @@ body {
 
 .settings-panel-tabs .tab-title.active > a {
     background-color: #f5f5f5 !important;
+    border:1px solid #ccc;
+    border-bottom:1px solid #f5f5f5;
 }
+
+.settings-panel { border:1px solid #ccc; }
+
+
 
 .console {
     overflow:scroll;
@@ -59,6 +81,15 @@ body {
     white-space: pre;
     font-size: 0.9rem;
 }
+
+
+.tabs .tab-title.console-tab.active > a {
+    background-color: #333 !important;
+    color: #0f0;
+    border:1px solid #ccc;
+    border-bottom:1px solid #333;
+}
+
 
 .row.full-width {
   width: 90%;
