--- a/wooey/templates/public/create-job.html
+++ b/wooey/templates/public/create-job.html
@@ -1,30 +1,14 @@
 
 {% extends "layout.html" %}
+{% block content_class %}row full-width{% endblock content_class %}
+
 {% block content %}
-
-    <h1 class="no-margin-bottom">{% if script.nicename %}{{ script.display_name }}{% else %}{{ script.name }}{% endif %}</h1>
-
-    <p>{{ script.description }}</p>
-
-    <!-- Build the UI
-    {u'optional': [{u'type': u'CheckBox', u'data': {u'display_name': u'accumulate', u'commands': [u'--sum'], u'nargs': u'', u'help': u'sum the integers (default: find the max)', u'choices': []}}], u'program': {u'path': u'/Users/mxf793/repos/wooey/scripts/mock_argparse_example.py', u'epilog': None, u'name': u'mock_argparse_example', u'description': u'Process some integers.'}, u'parser': {u'prefix_chars': u'-', u'argument_default': None}, u'required': [{u'type': u'FileChooser', u'data': {u'display_name': u'integers', u'commands': [], u'nargs': u'+', u'help': u'an integer for the accumulator', u'choices': []}}]}
-
-    'FileChooser',
-    'MultiFileChooser',
-    'FileSaver',
-    'DirChooser',
-    'DateChooser',
-    'TextField',
-    'Dropdown',
-    'Counter',
-    'RadioGroup',
-    'CheckBox'
-
-    -->
-
-
-
-
+<div class="row full-height">
+    <div class="large-12 pad-edges">
+        <h1 class="no-margin-bottom">{% if script.nicename %}{{ script.display_name }}{% else %}{{ script.name }}{% endif %}</h1>
+        <p>{{ script.description }}
+    </div>
+</div>
 <div class="row">
 {% include "public/job-form.html" %}
 <div class="large-8 columns">
