--- a/wooey/templates/public/job-form.html
+++ b/wooey/templates/public/job-form.html
@@ -1,4 +1,4 @@
-<div class="large-4 columns">
+<div class="large-4 columns" style="min-height:100%;">
 
 <ul class="tabs settings-panel-tabs" data-tab role="tablist">
     {% for section in ['required','optional'] %}
@@ -16,37 +16,40 @@
     {% for w in metadata[section] %}
       <div class="row">
         <div class="large-12 columns">
-
             {% if w['widget'] == 'FileChooser' %}
-                <label for="{{ w['data']['display_name'] }}">{{ w['data']['help'] }}
-                    <input type="file" name="{{ w['data']['display_name'] }}" id="{{ w['data']['display_name'] }}">
+                <label for="{{ w['name'] }}">{{ w['help'] }}
+                    <input type="file" name="{{ w['name'] }}" id="{{ w['name'] }}">
                 </label>
             {% elif w['widget'] == 'CheckBox' %}
                 <div class="row">
                     <div class="large-1 columns">
-                        <input type="checkbox" placeholder="{{ w['data']['default'] }}" id="{{ w['data']['display_name'] }}" name="{{ w['data']['display_name'] }}">
+                        <input type="checkbox" placeholder="{{ w['default'] }}" id="{{ w['name'] }}" name="{{ w['name'] }}">
                     </div>
                     <div class="large-11 columns">
-                        <label for="{{ w['data']['display_name'] }}">{{ w['data']['help'] }}</label>
+                        <label for="{{ w['name'] }}">{{ w['help'] }}</label>
                     </div>
                 </div>
             {% elif w['widget'] == 'TextField' %}
-                <label for="{{ w['data']['display_name'] }}">{{ w['data']['help'] }}
-                    <input type="text" placeholder="{{ w['data']['default'] }}" id="{{ w['data']['display_name'] }}" name="{{ w['data']['display_name'] }}">
+                <label for="{{ w['name'] }}">{{ w['help'] }}
+                    <input type="text" placeholder="{{ w['default'] }}" id="{{ w['name'] }}" name="{{ w['name'] }}">
                 </label>
-            {% elif w['widget'] == 'Dropdown' %}
-                <label for="{{ w['data']['display_name'] }}">{{ w['data']['help'] }}
-                    <select type="text" placeholder="{{ w['data']['default'] }}" id="{{ w['data']['display_name'] }}" name="{{ w['data']['display_name'] }}">
+            {% elif w['widget'] == 'RangeField' %}
+                <label for="{{ w['name'] }}">{{ w['help'] }}
+                    <input type="range" placeholder="{{ w['default'] }}" id="{{ w['name'] }}" name="{{ w['name'] }}">
+                </label>
+            {% elif w['widget'] == 'SelectOne' or w['widget'] == 'SelectMany' %}
+                <label for="{{ w['name'] }}">{{ w['help'] }}
+                    <select type="text" placeholder="{{ w['default'] }}" id="{{ w['name'] }}" name="{{ w['name'] }}" {% if w['widget'] == 'SelectMany' %}multiple{% endif %}>
 
-                        {% if w['data']['choices'] is mapping %}
+                        {% if w['choices'] is mapping %}
 
-                            {% for choice, label in w['data']['choices'].items() %}
+                            {% for choice, label in w['choices'].items() %}
                                 <option value="{{ choice }}">{{ label }}</option>
                             {% endfor %}
 
                         {% else %}
 
-                            {% for choice in w['data']['choices'] %}
+                            {% for choice in w['choices'] %}
                                 <option value="{{ choice }}">{{ choice }}</option>
                             {% endfor %}
 
